fixed error messages